--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <body>
 This is pretty cool
 <h1>Big Title</h1>
-<a href="nextweb.html">click here</a>
+<a href="/src/nextweb.html">click here</a>
 </body>
